[project]
name = "openclaw-session-md"
version = "0.1.0"
description = "Convert OpenClaw session JSONL logs into readable Markdown transcripts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OpenClaw" }]
keywords = ["openclaw", "jsonl", "markdown", "session", "transcript"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Documentation",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/njzjz-bot/openclaw-session-md"
Repository = "https://github.com/njzjz-bot/openclaw-session-md"
Issues = "https://github.com/njzjz-bot/openclaw-session-md/issues"

[project.scripts]
openclaw-session-md = "openclaw_session_md.cli:main"
oc-session-md = "openclaw_session_md.cli:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
